--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -14,25 +14,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-FROM openwhisk/actionloop-v2:latest as builder
 
-#Jolie docker
-FROM myjolie/1
-
-RUN mkdir -p /proxy/bin /proxy/lib /proxy/action
-WORKDIR /proxy
-COPY --from=builder bin/proxy /bin/proxy
-
-#Launcher and compile
-ADD lib/launcher.ol /proxy/lib/launcher.ol
-ADD bin/compile /proxy/bin/compile
-
-#Since the compile script is in python
-RUN apk update && apk add python3
-
-RUN apt-get update
-RUN apt-get install -y python3
-
-ENV OW_COMPILER=/proxy/bin/compile
-ENTRYPOINT ["/bin/proxy"]
-
+style = intellij
+danglingParentheses = false
+maxColumn = 120
+docstrings = JavaDoc
+rewrite.rules = [SortImports]
+project.git = true
