--- a/jolie1.11/Dockerfile
+++ b/jolie1.11/Dockerfile
@@ -33,22 +33,10 @@ ADD bin/compile /proxy/bin/compile
 RUN apt-get update
 RUN apt-get install -y python3
 
-##########
-#Maybe java fix??
-RUN apt-get update && \
-    apt-get install -y openjdk-8-jdk && \
-    apt-get install -y ant && \
-    apt-get clean;
-    
-# Fix certificate issues
-RUN apt-get update && \
-    apt-get install ca-certificates-java && \
-    apt-get clean && \
-    update-ca-certificates -f;
+# please check if the path exists
+ENV JAVA_HOME=/opt/java/openjdk    
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
 
-# Setup JAVA_HOME -- useful for docker commandline
-ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
-RUN export JAVA_HOME
 ENV JOLIE_HOME=/usr/lib/jolie
 RUN export JOLIE_HOME
 ##########
